# tauri-boilerplate

./: .eslintrc.cjs  monorepo.ts  package.json
.github/workflows/: publish.yml
source/: .gitignore  Cargo.toml  tauri.conf.json
source/src/: main.rs
source/src/commands/: common.rs
